--- a/static/style.css
+++ b/static/style.css
@@ -153,8 +153,8 @@ header h1 {
 
     #analysis .col-12.col-md-4 .row .btn {
         width: 100%;
-        font-size: 0.8rem;
-        padding: 0.3rem 0.5rem;
+        font-size: 0.7rem; /* 調整字型大小 */
+        padding: 0.2rem 0.4rem; /* 調整內邊距 */
     }
 
     .transaction-item {
